--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
 <html>
-<h1> HELLLLLLLLLLLLOOOOOOOOOOOOOOOOOOOOOOO </h1>
+  <body>
+    <h1> HELLLLLLLLLLLLOOOOOOOOOOOOOOOOOOOOOOO </h1>
+  </body>
 </html>
