--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
+  <head>
+    <title>AP Lang: The Movie</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
     <h1> HELLLLLLLLLLLLOOOOOOOOOOOOOOOOOOOOOOO!</h1>
+    <p>should be green or something i think</p>
   </body>
 </html>
