Added some fonts

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <title>AP Lang: The Movie</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Montserrat:wght@300&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1> HELLLLLLLLLLLLOOOOOOOOOOOOOOOOOOOOOOO!</h1>
+    <h1>AP Lang: The Movie</h1>
     <p>should be green or something i think</p>
   </body>
 </html>
