--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <title>AP Lang: The Movie</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    
     <h1>AP Lang: The Movie</h1>
-    <p>should be green or something i think</p>
+    <p>paragraph text!</p>
   </body>
 </html>
