--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>AP Lang: The Movie</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Montserrat:wght@300&family=Zen+Dots&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1> HELLLLLLLLLLLLOOOOOOOOOOOOOOOOOOOOOOO!</h1>
-    <p>should be green or something i think</p>
+    <h1>AP Lang: The Movie</h1>
+    <img src="kermit.png" alt="Kermit" />
+    <p>paragraph text!</p>
   </body>
 </html>
